fix layout shift

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -85,6 +84,7 @@ body {
 
 html {
   font-size: 16px;
+  scrollbar-gutter: stable; //fix layout shift when scrollbar appears
 }
 
 body {
